--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-body { background:rgb(30,30,40); }
-form { max-width:420px; margin:50px auto; }
+
+form {
+  max-width:420px; margin:50px auto; 
+}
+
+body {
+  background-color: var(--body-background-color);
+}
 
 .feedback-input {
   color:white;
