--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
+:root {
+  --body-background-color: white;
+  --sub-text-color: black;
+}
+
+
 
 form {
   max-width:420px; margin:50px auto; 
@@ -10,7 +16,7 @@ body {
 }
 
 .feedback-input {
-  color:white;
+  color: var(--sub-text-color);
   font-family: Helvetica, Arial, sans-serif;
   font-weight:500;
   font-size: 18px;
