--- a/static/style.css
+++ b/static/style.css
@@ -16,16 +16,13 @@ body {
 }
 
 
-.welcome {
+.welcome, .welcome_name {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   width: 100%;
-  cursor:pointer;
   color: var(--sub-text-color);
   font-size:24px;
   padding-top:10px;
-  padding-bottom:10px;
-  transition: all 0.3s;
-  margin-top:-4px;
+  margin-top:-30px;
   font-weight:700;
   box-sizing: border-box;
   display: flex;
