--- a/static/style.css
+++ b/static/style.css
@@ -16,19 +16,33 @@ body {
 }
 
 
-.welcome, .welcome_name {
+.welcome {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   width: 100%;
   color: var(--sub-text-color);
-  font-size:24px;
-  padding-top:10px;
-  margin-top:-25px;
-  font-weight:700;
+  font-size: 24px;
+  padding-top: 10px;
+  margin-top: -25px;
+  font-weight: 700;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+.welcome_name {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  color: var(--sub-text-color);
+  font-size: 24px;
+  margin-top: -25px;
+  font-weight: 700;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .feedback-input {
   color: var(--sub-text-color);
